syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";
import "storage/deployment.proto";
import "storage/policy.proto";
import "storage/process_indicator.proto";
import "protobuf/gogoproto/gogo.proto";

package storage;

message Alert {
    string id                                = 1 [(gogoproto.moretags) = "sensorhash:\"ignore\""]; // Internal use only

    Policy policy                            = 2 [(gogoproto.moretags) = "search_index:\"Policy ID,Policy,Category,Severity\""];
    LifecycleStage lifecycle_stage           = 3 [(gogoproto.moretags) = "search:\"Lifecycle Stage,store\""];

    message Deployment {
        option (gogoproto.goproto_unrecognized) = false;
        string                  id                  = 1 [(gogoproto.moretags) = "search:\"Deployment ID,store,hidden\""];
        string                  name                = 2 [(gogoproto.moretags) = "search:\"Deployment,store\""];
        string                  type                = 4;
        string                  namespace           = 5 [(gogoproto.moretags) = "search:\"Namespace,store\""];
        string                  namespace_id        = 16 [(gogoproto.moretags) = "search:\"Namespace ID,hidden\""];
        map<string, string>     labels              = 7;
        string                  cluster_id          = 9 [(gogoproto.moretags) = "search:\"Cluster ID,store\""];
        string                  cluster_name        = 10 [(gogoproto.moretags) = "search:\"Cluster,store\""];
        message Container {
            option (gogoproto.goproto_unrecognized) = false;
            // This is backwards compatible with the old image format
            ContainerImage      image               = 3 [(gogoproto.moretags) = "search:\"-\""];
            string              name                = 10;
        }
        repeated Container      containers          = 11;
        map<string, string>     annotations         = 14;
        bool                    inactive            = 15 [(gogoproto.moretags) = "search:\"Inactive Deployment,store\""];
    }

    Deployment deployment                    = 4;

    message Violation {
        string message                                 = 1;
        reserved 2; // formerly link
        repeated ProcessIndicator DEPRECATED_processes = 3 [(gogoproto.moretags) = "search:\"-\""];
    }
    repeated Violation violations            = 5;

    message ProcessViolation {
        string message                      = 1;
        repeated ProcessIndicator processes = 2 [(gogoproto.moretags) = "search:\"-\""];
    }
    ProcessViolation process_violation      = 13;

    message Enforcement {
        storage.EnforcementAction action = 1;
        string message                   = 2;
    }
    Enforcement enforcement                  = 6;
    google.protobuf.Timestamp time           = 7 [(gogoproto.moretags) = "search:\"Violation Time\" sensorhash:\"ignore\""];
    google.protobuf.Timestamp first_occurred = 10 [(gogoproto.moretags) = "sensorhash:\"ignore\""];
    ViolationState state                     = 11 [(gogoproto.moretags) = "search:\"Violation State,store\""];
    google.protobuf.Timestamp snooze_till    = 12;
    repeated string tags                     = 14 [(gogoproto.moretags) = "search:\"Tag,store\""];
}


message ListAlert {
    string id                               = 1;
    LifecycleStage lifecycle_stage          = 2 [(gogoproto.moretags) = "search:\"Lifecycle Stage,store\""];
    google.protobuf.Timestamp time          = 3 [(gogoproto.moretags) = "search:\"Violation Time\""];
    ListAlertPolicy policy                  = 4;
    ListAlertDeployment deployment          = 5;
    ViolationState state                    = 6 [(gogoproto.moretags) = "search:\"Violation State,store\""];
    int32 enforcement_count                 = 7;
}

message ListAlertPolicy {
    string id                                   = 1 [(gogoproto.moretags) = "search:\"Policy ID,store,hidden\""];
    string name                                 = 2 [(gogoproto.moretags) = "search:\"Policy,store\""];
    Severity severity                           = 3 [(gogoproto.moretags) = "search:\"Severity,store\""];
    string description                          = 4;
    repeated string categories                  = 5 [(gogoproto.moretags) = "search:\"Category,store\""];
}

message ListAlertDeployment {
    string id                                  = 1 [(gogoproto.moretags) = "search:\"Deployment ID,store,hidden\""];
    string name                                = 2 [(gogoproto.moretags) = "search:\"Deployment,store\""];
    reserved 3; // was: google.protobuf.Timestamp updated_at
    string cluster_name                        = 4 [(gogoproto.moretags) = "search:\"Cluster,store\""];
    string namespace                           = 5 [(gogoproto.moretags) = "search:\"Namespace,store\""];
    string cluster_id                          = 6 [(gogoproto.moretags) = "search:\"Cluster ID,store\""];
    bool inactive = 7 [(gogoproto.moretags) = "search:\"Inactive Deployment,store\""];
}

enum ViolationState {
    ACTIVE = 0;
    SNOOZED = 1;
    RESOLVED = 2;
}
